--- a/Tools/installertools/Windows/main.wxs
+++ b/Tools/installertools/Windows/main.wxs
@@ -27,7 +27,8 @@
         </Directory>
 
         <Directory Id='CommonFilesFolder'>
-	  <Directory Id="EXTENSIONSDIR" Name="TTBlue">
+        	<!-- this next one is for the *.ttdll extensions to the runtime -->
+	  <Directory Id="EXTENSIONSDIR" Name="Jamoma">
 	  </Directory>
 	</Directory>
 
@@ -45,7 +46,7 @@
     <UIRef Id="WixUI_FeatureTree" />
     <UIRef Id="WixUI_ErrorProgressText" />
 
-    <Icon Id="JamomaIcon" SourceFile="..\..\..\Modular\SourceCode\Framework\resources\jamoma.ico" />
+    <Icon Id="JamomaIcon" SourceFile="..\..\..\Modules\Modular\SourceCode\Framework\resources\jamoma.ico" />
     <Property Id="ARPPRODUCTICON">JamomaIcon</Property>
     <Property Id="ARPURLINFOABOUT">http://jamoma.org</Property>
 
