--- a/Tools/installertools/Windows/main.wxs
+++ b/Tools/installertools/Windows/main.wxs
@@ -45,7 +45,7 @@
     <UIRef Id="WixUI_FeatureTree" />
     <UIRef Id="WixUI_ErrorProgressText" />
 
-    <Icon Id="JamomaIcon" SourceFile="..\..\..\Modular\SourceCode\Framework\resources\jamoma.ico" />
+    <Icon Id="JamomaIcon" SourceFile="..\..\..\Modules\Modular\SourceCode\Framework\resources\jamoma.ico" />
     <Property Id="ARPPRODUCTICON">JamomaIcon</Property>
     <Property Id="ARPURLINFOABOUT">http://jamoma.org</Property>
 
