Rails: The SVG does not display in Firefox the way we are embedding it in our page.  It does show up if you view the URL for the SVG directly, however -- indicating that it is a problem with how we embed it, or some property of the SVG file needed for embedding.  This is a lame attempt at trying to fix it, but this does not actually fix it...

--- a/examples/Rails/app/views/graphers/index.html.erb
+++ b/examples/Rails/app/views/graphers/index.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 
 <% svg.write("temp-exp.svg") %>
-<%= image_tag("temp-exp.svg") %>
+<%= image_tag("temp-exp.svg", {:width => "600", :height => "200"}) %>
 
 
 
