change title of 'Multicore' rails app to 'Audio Graph'

--- a/examples/MulticoreOnRails/app/views/basics/ui.html.erb
+++ b/examples/MulticoreOnRails/app/views/basics/ui.html.erb
@@ -1,4 +1,4 @@
-<h1>Jamoma Multicore</h1>
+<h1>Jamoma Audio Graph</h1>
 <div id="info_zone">Basic amplitude modulation of your default audio input to your default audio output</div>
 <br/><br/>
 
